# blabla

./: .env.example  .gitignore  Makefile  README.md  cliff.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_widen_whatsapp_columns.py  0003_os_sequence.py  0004_mensagens_partitions_2026_07_to_09.py  0005_os_followup_reatribuicao.py  0006_operacao_v2.py  0007_os_cliente_nullable.py  0008_os_pppoe_fields.py  0009_os_plano_relatorio.py  0010_os_nome_sgp.py  0011_conversa_resumo_handoff.py  0012_cobranca_regua.py  0013_canal.py  0014_prompt_variant.py  0015_estoque.py  0016_mensagem_transcricao.py  0017_recolhido_tipo.py  0018_cliente_equipamento.py  0019_indicacao.py  0020_os_reabertura.py  0021_device_tokens.py  0022_users_foto.py  0023_clientes_cadastro.py  0024_clientes_cadastro_email_due_date.py  0024_email_due_date.py  0025_nome_normalized.py  0026_cliente_app_users.py  0027_cliente_app_os.py  0028_cliente_app_messages.py  0029_cliente_app_chat_handoff.py  0030_promocoes.py  0031_indicacao_uso_origem.py  0032_indicacao_shares_app.py  0033_cliente_app_notificacoes.py  0033_estoque_categoria.py  0034_cliente_app_notificacoes.py  0035_cliente_app_os_nps.py  0036_cliente_app_contatos_operadora.py  0037_cliente_app_os_visita_tecnica.py  0038_cliente_app_fidelidade.py  (+13 more)
apps/api/src/ondeline_api/: __init__.py  config.py  deps.py  main.py
apps/api/src/ondeline_api/adapters/: __init__.py  evolution.py
apps/api/src/ondeline_api/api/: auth.py  deps_v1.py  health.py  metrics.py  rate_limit.py  webhook.py  webhook_cloud.py
apps/api/src/ondeline_api/auth/: __init__.py  audit.py  cliente_deps.py  csrf.py  deps.py  jwt.py  lockout.py  passwords.py  rbac.py
apps/api/src/ondeline_api/db/: __init__.py  base.py  crypto.py  engine.py
apps/api/src/ondeline_api/domain/: __init__.py  fsm.py  os_sequence.py
apps/api/src/ondeline_api/observability/: __init__.py  celery_queue.py  metrics.py
apps/api/src/ondeline_api/repositories/: __init__.py  campanha.py  canal.py  cliente.py  cliente_app_user.py  cliente_cadastro.py  cliente_equipamento.py  cobranca.py  config.py  conversa.py  estoque.py  indicacao.py  lead.py  manutencao.py  mensagem.py  notificacao.py  ordem_servico.py  prompt_variant.py  tecnico.py
apps/api/src/ondeline_api/scripts/: seed_admin.py
apps/api/src/ondeline_api/services/: __init__.py  asr.py  broadcast_import.py  broadcast_sender.py  business_hours.py  canal_evolution.py  canal_whatsapp.py  cliente_app_notif.py  cliente_app_otp.py  cliente_import.py  cobranca_regua.py  conversa_attend.py  conversa_events.py  conversa_media.py  estoque.py  fcm_service.py  handoff_summary.py  inbound.py  llm_loop.py  logging_config.py  material_concluir.py  media_classifier.py  missoes.py  notify_planner.py  notify_sender.py  os_pdf.py  otel_init.py  phone.py  pii_mask.py  pix_brcode.py  pix_qr.py  prompt_router.py  push.py  rede_service.py  responder.py  segmento.py  sentry_init.py  sgp_cache.py  sgp_config.py  sgp_planos.py  (+5 more)
apps/api/src/ondeline_api/templates/: os_pdf.html
apps/api/src/ondeline_api/tools/: __init__.py  abrir_ordem_servico.py  buscar_cliente_sgp.py  consultar_manutencoes.py  consultar_planos.py  consultar_rede.py  context.py  enviar_boleto.py  iniciar_mudanca_endereco.py  registry.py  transferir_para_humano.py
apps/api/src/ondeline_api/webhook/: __init__.py  hmac.py  parser.py  parser_cloud.py
apps/api/src/ondeline_api/workers/: __init__.py  asr_jobs.py  beat_schedule.py  broadcast.py  celery_app.py  cliente_app_notif_jobs.py  cobranca_jobs.py  fcm_push.py  followup.py  handoff_summary_task.py  heartbeat.py  inbound.py  llm_turn.py  media_jobs.py  notify_jobs.py  (+5 more)
apps/api/tests/: conftest.py  test_asr.py  test_audit.py  test_auth_login.py  test_auth_login_timing.py  test_auth_me_rbac.py  test_auth_refresh_logout.py  test_broadcast_import.py  test_broadcast_task.py  test_business_hours.py  test_campanha_amostra.py  test_campanha_repo_v3.py  test_canal.py  test_celery_inbound_task.py  test_celery_outbound_task.py  test_celery_queue.py  test_celery_tasks_registered.py  test_cliente_app_auth.py  test_cliente_app_chat_tools.py  test_cliente_app_me.py  test_cliente_app_os.py  test_cliente_app_rede.py  test_cliente_equipamento.py  test_cobranca_regua.py  test_compose_queues_sync.py  test_comunicados_api.py  test_config.py  test_crypto.py  test_csrf.py  test_e2e_llm_flow.py  test_e2e_webhook.py  test_estoque.py  test_evolution_adapter.py  test_fsm.py  test_fsm_followup.py  test_fsm_m4.py  test_genieacs_client.py  test_genieacs_wifi_paths.py  test_handoff_summary.py  test_health.py  (+71 more)
apps/api/tests/services/: test_logging_config.py
(+655 files in other folders)
