[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ondeline-api"
version = "0.1.0"
description = "Ondeline v2 API + workers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "freezegun>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ondeline_api"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
