[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ondeline-api"
version = "0.1.0"
description = "Ondeline v2 API + workers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.0",
    "cryptography>=43.0.0",
    "email-validator>=2.1.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.21.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.20",
    "sentry-sdk[fastapi,celery,sqlalchemy]>=2.20.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "freezegun>=1.5.0",
    "fakeredis>=2.26.0",
    "celery-types>=0.22.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ondeline_api"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
